# dael_wakeword

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json
src/deployment/: dael_interface.py  engine.py  engine_logic.py  inteference_engine_original.py
src/scripts/: audio_files_csv_validator.py  audio_files_format_validator.py  audio_files_renamer.py  augmentation.py  combine_csv_files.py  convert_files_to_wav.py  convert_to_16kHz.py  create_split_files.py  extract_features.py  generate_silence_clips.py  move_random_files.py  mp3_to_wav.py  random_audio_files_transfer_selector.py  remove_silence.py  rename_files_with_csv.py  speech_clips_augmentation.py  speech_clips_trim_preprocessing.py  split_datasets_for_processed.py  split_datasets_for_training.py  validate_audio_format.py  validate_csv_against_audio_files.py
src/training/: dataset_and_features_loader.py  models.py  readme.md  trainer.py  training_config.yaml
