[project]
name = "dael-wake-word"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "packaging>=26.2",
    "pandas>=3.0.2",
    "pyaudio>=0.2.14",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torch-audiomentations>=0.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.1",
    "tqdm>=4.67.3",
]
